--- a/ClassLibrary1/ModForResearchTUB.csproj
+++ b/ClassLibrary1/ModForResearchTUB.csproj
@@ -49,6 +49,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="RaceSuburban.cs" />
+    <Compile Include="RaceDesert.cs" />
     <Compile Include="RaceToWoodmill.cs" />
     <Compile Include="RaceInterface.cs" />
     <Compile Include="ModForResearchTUB.cs" />
