add intro class to project

--- a/ClassLibrary1/ModForResearchTUB.csproj
+++ b/ClassLibrary1/ModForResearchTUB.csproj
@@ -59,6 +59,7 @@
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
     <Compile Include="RaceConvoy.cs" />
+    <Compile Include="RaceIntro.cs" />
     <Compile Include="RaceSuburban.cs" />
     <Compile Include="RaceDesert.cs" />
     <Compile Include="RaceToWoodmill.cs" />
