--- a/ClassLibrary1/ModForResearchTUB.csproj
+++ b/ClassLibrary1/ModForResearchTUB.csproj
@@ -57,6 +57,12 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="directorGUI.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="directorGUI.Designer.cs">
+      <DependentUpon>directorGUI.cs</DependentUpon>
+    </Compile>
     <Compile Include="DrawDiagram.cs" />
     <Compile Include="Utilities.cs" />
     <Compile Include="LomontFFT.cs" />
@@ -82,6 +88,9 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
+    <EmbeddedResource Include="directorGUI.resx">
+      <DependentUpon>directorGUI.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
