follow recommendation in ms246989 and always copy database

--- a/ClassLibrary1/ModForResearchTUB.csproj
+++ b/ClassLibrary1/ModForResearchTUB.csproj
@@ -124,10 +124,10 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="ModForResearchTUB.mdf">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
     <Content Include="ModForResearchTUB_log.ldf">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       <DependentUpon>ModForResearchTUB.mdf</DependentUpon>
     </Content>
   </ItemGroup>
