add class for traffic signals and designer with menu options

--- a/ClassLibrary1/ModForResearchTUB.csproj
+++ b/ClassLibrary1/ModForResearchTUB.csproj
@@ -80,6 +80,9 @@
       <DependentUpon>directorGUI.cs</DependentUpon>
     </Compile>
     <Compile Include="DrawDiagram.cs" />
+    <Compile Include="Race.cs" />
+    <Compile Include="Trafficlight.cs" />
+    <Compile Include="TrafficLightManager.cs" />
     <Compile Include="Utilities.cs" />
     <Compile Include="LomontFFT.cs" />
     <Compile Include="Properties\Resources.Designer.cs">
