catch errors surrounding App.config and DB host

--- a/ClassLibrary1/App.config
+++ b/ClassLibrary1/App.config
@@ -15,5 +15,7 @@
       <provider invariantName="System.Data.SQLite.EF6" type="System.Data.SQLite.EF6.SQLiteProviderServices, System.Data.SQLite.EF6" />
     </providers>
   </entityFramework>
-  
+  <appSettings>
+    <add key="dbHost" value="localhost"/>
+  </appSettings>
 </configuration>
