--- a/ClassLibrary1/ModForResearchTUB.csproj
+++ b/ClassLibrary1/ModForResearchTUB.csproj
@@ -48,6 +48,10 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Gta5EyeTracking">
+      <HintPath>..\..\..\..\..\Downloads\GTA V\4298dc-Gta5EyeTracking_0.8.201\Gta5EyeTracking.dll</HintPath>
+    </Reference>
+    <Reference Include="Microsoft.VisualBasic" />
     <Reference Include="NativeUI">
       <HintPath>G:\Uni\Bachelorarbeit\NativeUI_1.7\NativeUI.dll</HintPath>
     </Reference>
@@ -57,6 +61,7 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
+    <Reference Include="System.configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.Data.SQLite">
       <HintPath>G:\Uni\Bachelorarbeit\sqlite-netFx451-static-binary-x64-2013-1.0.102.0\System.Data.SQLite.dll</HintPath>
@@ -80,6 +85,8 @@
       <DependentUpon>directorGUI.cs</DependentUpon>
     </Compile>
     <Compile Include="DrawDiagram.cs" />
+    <Compile Include="RaceJesiah.cs" />
+    <Compile Include="RaceTerminal.cs" />
     <Compile Include="Race.cs" />
     <Compile Include="Trafficlight.cs" />
     <Compile Include="TrafficLightManager.cs" />
@@ -147,6 +154,9 @@
   <ItemGroup>
     <None Include="App.config" />
     <None Include="mod4researchTUB.db" />
+    <None Include="ModForResearchTUB.config">
+      <SubType>Designer</SubType>
+    </None>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
