--- a/ClassLibrary1/ModForResearchTUB.csproj
+++ b/ClassLibrary1/ModForResearchTUB.csproj
@@ -67,6 +67,7 @@
       <HintPath>G:\Uni\Bachelorarbeit\sqlite-netFx451-static-binary-x64-2013-1.0.102.0\System.Data.SQLite.dll</HintPath>
     </Reference>
     <Reference Include="System.Drawing" />
+    <Reference Include="System.Web.Extensions" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Windows.Forms.DataVisualization" />
     <Reference Include="System.Xml.Linq" />
@@ -131,11 +132,8 @@
     <WCFMetadata Include="Service References\" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="ModForResearchTUB.mdf">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
+    <Content Include="ModForResearchTUB.mdf" />
     <Content Include="ModForResearchTUB_log.ldf">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       <DependentUpon>ModForResearchTUB.mdf</DependentUpon>
     </Content>
   </ItemGroup>
@@ -160,7 +158,8 @@
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
-    <PostBuildEvent>copy "$(ProjectDir)$(OutDir)$(TargetName)$(TargetExt)" "G:\SteamLibrary\steamapps\common\Grand Theft Auto V\scripts\"</PostBuildEvent>
+    <PostBuildEvent>
+    </PostBuildEvent>
   </PropertyGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
